image path troubleshoot
testing with lowercase file extensions

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <h1 class="section-header-text">works</h1>
             <div class="gallery-item"><img src="/images/gallery/samples/Azra-Portrait.JPG"></div>
             <div class="gallery-item"><img src="/images/gallery/samples/20241004-Oswell-Final.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/Sen-Portrait.PNG"></div>
+            <div class="gallery-item"><img src="/images/gallery/samples/Sen-Portrait.png"></div>
             <div class="gallery-item"><img src="/images/gallery/samples/Sharokh.JPG"></div>
             <div class="gallery-item"><img src="/images/gallery/samples/comitia_127_postcard.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/WitchyShenanigans.PNG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/Vigilantes.PNG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/AkashaAndKrius.PNG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/VolcanicEnvironment.PNG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/InTheDark.PNG"></div>
+            <div class="gallery-item"><img src="/images/gallery/samples/WitchyShenanigans.png"></div>
+            <div class="gallery-item"><img src="/images/gallery/samples/Vigilantes.png"></div>
+            <div class="gallery-item"><img src="/images/gallery/samples/AkashaAndKrius.png"></div>
+            <div class="gallery-item"><img src="/images/gallery/samples/VolcanicEnvironment.png"></div>
+            <div class="gallery-item"><img src="/images/gallery/samples/InTheDark.png"></div>
             <div class="gallery-item"><img src="/images/gallery/samples/TheresAlwaysSomethingBigger.JPG"></div>
             <div class="gallery-item"><img src="/images/gallery/samples/HeightsFolioCover.JPG"></div>
         </section>
@@ -52,13 +52,13 @@
             </div>
             <div>
                     If you would like to collaborate or commission a work of art, please message me at:
-                    <div><a href="mailto:ali.timonera@gmail.com"><img src="/images/socialmedia/icons8-email-96.PNG"></a>ali.timonera@gmail.com</div>
+                    <div><a href="mailto:ali.timonera@gmail.com"><img src="/images/socialmedia/icons8-email-96.png"></a>ali.timonera@gmail.com</div>
                     <br/>
                     (Rather outdated) Social Media
                     <div>
-                        <a href="https://www.instagram.com/alinadineart/"><img src="/images/socialmedia/icons8-instagram-96.PNG"></a>
-                        <a href="https://www.deviantart.com/0anacondaq0"><img src="/images/socialmedia/icons8-deviantart-96.PNG"></a>
-                        <a href="https://alinadineart.tumblr.com/"><img src="/images/socialmedia/icons8-tumblr-96.PNG"></a>
+                        <a href="https://www.instagram.com/alinadineart/"><img src="/images/socialmedia/icons8-instagram-96.png"></a>
+                        <a href="https://www.deviantart.com/0anacondaq0"><img src="/images/socialmedia/icons8-deviantart-96.png"></a>
+                        <a href="https://alinadineart.tumblr.com/"><img src="/images/socialmedia/icons8-tumblr-96.png"></a>
                     </div>
             </div>
         </section>
