image path troubleshoot
added a prefix .

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         </section>
         <section id="gallery">
             <h1 class="section-header-text">works</h1>
-            <div class="gallery-item"><img src="/images/gallery/samples/Azra-Portrait.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/20241004-Oswell-Final.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/Sen-Portrait.png"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/Sharokh.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/comitia_127_postcard.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/WitchyShenanigans.png"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/Vigilantes.png"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/AkashaAndKrius.png"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/VolcanicEnvironment.png"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/InTheDark.png"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/TheresAlwaysSomethingBigger.JPG"></div>
-            <div class="gallery-item"><img src="/images/gallery/samples/HeightsFolioCover.JPG"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/Azra-Portrait.JPG"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/20241004-Oswell-Final.JPG"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/Sen-Portrait.png"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/Sharokh.JPG"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/comitia_127_postcard.JPG"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/WitchyShenanigans.png"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/Vigilantes.png"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/AkashaAndKrius.png"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/VolcanicEnvironment.png"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/InTheDark.png"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/TheresAlwaysSomethingBigger.jpg"></div>
+            <div class="gallery-item"><img src="./images/gallery/samples/HeightsFolioCover.jpg"></div>
         </section>
         <section id="about">
             <h1 class="section-header-text">about</h1>
