landing page text and font sizing improvements
added an absolutely positioned wrapper around the title and subtitle for more predictable responsiveness to different screen sizes. changed menu font size to rem units.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>  
         </section>
         <section id="landing">
-            <div>
-                <div class="landing-title-text landing-title-position">ali nadine art</div>
+            <div id="landing-title-subtitle-wrapper">
+                <div class="landing-title-text">ali nadine art</div>
                 <div class="landing-subtitle-text landing-subtitle-position">fantasy illustration</div>
             </div>
         </section>
