uploading higher def image

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 
                 <!-- Gallery Item 5 -->
                 <div class="gallery-item" data-category="personal">
-                    <img src="images/gallery/samples/comitia_127_postcard.jpg" alt="Swan and Duck">
+                    <img src="images/gallery/samples/comitia_127_postcard.png" alt="Swan and Duck">
                     <div class="gallery-item-info">
                         <h3 class="gallery-item-title">Swan and Duck</h3>
                         <p class="gallery-item-description">Illustration of OCs</p>
